--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -384,14 +384,14 @@ body {
 .popup {
   height: 100vh;
   width: 100%;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 9999;
   opacity: 0;
   visibility: hidden;
   transition: all .3s;
-  background-color: rgba(0, 0, 0, 0.92);
+  background-color: black;
   grid-column: full-start / col-end 6;
   background-size: cover;
   background-position: center;
