--- a/sass/_popup.scss
+++ b/sass/_popup.scss
@@ -1,7 +1,7 @@
 .popup {
     height: 100vh;
     width: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     // background-color: rgba($color-black, .8);
@@ -16,7 +16,7 @@
 
 
     // background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93));
-    background-color: rgba($color-black, 0.92);
+    background-color: rgba($color-black, 1);
     grid-column: full-start / col-end 6;
     background-size: cover;
     background-position: center;
