--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -269,6 +269,13 @@ body {
   font-size: 1.1rem;
   font-weight: 500; }
 
+.btn__icon, .btn__icon:link, .btn__icon:visited {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  align-content: center;
+  width: 25rem; }
+
 .logo {
   height: 6.96rem;
   width: 8rem;
@@ -382,7 +389,7 @@ body {
   color: #ffffff9d; }
 
 .popup {
-  height: 100vh;
+  height: 210%;
   width: 100%;
   position: absolute;
   top: 0;
@@ -391,7 +398,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all .3s;
-  background-color: black;
+  background-image: linear-gradient(rgba(231, 100, 7, 0.5), rgba(243, 160, 3, 0.5)), url(/img/shopping-2.jpeg);
   grid-column: full-start / col-end 6;
   background-size: cover;
   background-position: center;
@@ -400,17 +407,28 @@ body {
   grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
+  .popup__1 {
+    position: fixed;
+    width: 100%; }
   .popup__content {
     width: 160%;
     padding: 0 5rem;
-    background-image: linear-gradient(rgba(231, 100, 7, 0.5), rgba(243, 160, 3, 0.5)), url(/img/shopping-2.jpeg);
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
     display: table;
     overflow: hidden;
     opacity: 0;
     transform: translate(-36%, 36%) scale(0.25);
     transition: all .5s .2s; }
+    .popup__content-1 {
+      width: 200%;
+      padding: 0 5rem;
+      display: table;
+      overflow: hidden;
+      opacity: 1;
+      transform: translate(1%, 1%) scale(1);
+      transition: all .5s .2s; }
+      .popup__content-1:target {
+        opacity: 1;
+        transform: translate(-20%, 10%) scale(1.1); }
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
@@ -453,6 +471,62 @@ body {
     line-height: 1; }
   .popup__close:hover {
     color: #f85606; }
+
+.homes {
+  grid-column: center-start / center-end;
+  margin: 15rem 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem; }
+
+.home {
+  background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem; }
+  .home__img {
+    width: 100%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1; }
+  .home__like {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    fill: #f85606;
+    height: 2.5rem;
+    width: 2.5rem;
+    z-index: 2;
+    justify-self: end;
+    margin: 1rem; }
+  .home__name {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    justify-self: center;
+    align-self: end;
+    z-index: 3;
+    width: 80%;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+    padding: 1.25rem;
+    background-color: #101d2c;
+    color: #fff;
+    font-weight: 400;
+    transform: translateY(50%); }
+  .home__location, .home__rooms {
+    margin-top: 2.5rem; }
+  .home__location, .home__rooms, .home__area, .home__price {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    display: flex;
+    align-items: center; }
+    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+      fill: #f85606;
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+  .home__btn {
+    grid-column: 1 / -1; }
 
 .section-login {
   padding: 10rem 0;
