--- a/sass/_popup.scss
+++ b/sass/_popup.scss
@@ -1,11 +1,9 @@
 .popup {
-    height: 100vh;
+    height: 210%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    // background-color: rgba($color-black, .8);
-
     z-index: 9999;
 
     // display: none;
@@ -16,7 +14,9 @@
 
 
     // background-image: linear-gradient(rgba($color-secondary, .93), rgba($color-secondary, .93));
-    background-color: rgba($color-black, 1);
+    // background-color: rgba($color-black, 1);
+    background-image: linear-gradient(rgba($color-primary-gradiant-1, .5), rgba($color-primary-gradiant-2, .5)), url(/img/shopping-2.jpeg);
+
     grid-column: full-start / col-end 6;
     background-size: cover;
     background-position: center;
@@ -28,8 +28,10 @@
     justify-content: center;
 
 
-
-
+    &__1 {
+        position: fixed;
+        width: 100%;
+    }
 
 
     &__content {
@@ -37,20 +39,34 @@
 
         width: 160%;
         padding: 0 5rem;
-        // background-color: $color-white;
+        // background-image: linear-gradient(rgba($color-primary-gradiant-1, .5), rgba($color-primary-gradiant-2, .5)), url(/img/shopping-2.jpeg);
 
-        // color: red;
-
-        background-image: linear-gradient(rgba($color-primary-gradiant-1, .5), rgba($color-primary-gradiant-2, .5)), url(/img/shopping-2.jpeg);
-
-        box-shadow: 0 2rem 4rem rgba($color-black, .6);
-        border-radius: 10px;
+        // box-shadow: 0 2rem 4rem rgba($color-black, .6);
+        // border-radius: 10px;
         display: table;
         overflow: hidden;
         opacity: 0;
         transform: translate(-36%, 36%) scale(.25);
         transition: all .5s .2s;
+
+        &-1 {
+            width: 200%;
+            padding: 0 5rem;
+            display: table;
+            overflow: hidden;
+            opacity: 1;
+            transform: translate(1%, 1%) scale(1);
+            transition: all .5s .2s;
+
+            &:target {
+                opacity: 1;
+                transform: translate(-20%, 10%) scale(1.1);
+            }
+        }
+
+
     }
+
 
     &__left {
         width: 33.333333%;
@@ -93,7 +109,7 @@
     &:target {
         opacity: 1;
         visibility: visible;
-        
+
     }
 
     &:target &__content {
@@ -123,6 +139,3 @@
         }
     }
 }
-
-
-
