--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -274,7 +274,7 @@ body {
   align-items: center;
   flex-direction: row;
   align-content: center;
-  width: 25rem; }
+  justify-content: center; }
 
 .logo {
   height: 6.96rem;
@@ -292,6 +292,19 @@ body {
     width: 100%;
     height: 50rem;
     display: block; }
+
+.page {
+  display: flex;
+  background-color: black;
+  color: white;
+  height: 7rem;
+  justify-content: center;
+  align-items: center;
+  height: 4rem;
+  font-size: 1.8rem;
+  letter-spacing: .1rem; }
+  .page__1 {
+    background-color: grey; }
 
 .form__group:not(:last-child) {
   margin-bottom: 2rem;
@@ -474,7 +487,7 @@ body {
 
 .homes {
   grid-column: center-start / center-end;
-  margin: 15rem 0;
+  margin: 5rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 7rem; }
@@ -489,15 +502,6 @@ body {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     z-index: 1; }
-  .home__like {
-    grid-row: 1 / 2;
-    grid-column: 2 / 3;
-    fill: #f85606;
-    height: 2.5rem;
-    width: 2.5rem;
-    z-index: 2;
-    justify-self: end;
-    margin: 1rem; }
   .home__name {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
@@ -515,18 +519,19 @@ body {
     transform: translateY(50%); }
   .home__location, .home__rooms {
     margin-top: 2.5rem; }
-  .home__location, .home__rooms, .home__area, .home__price {
+  .home__location, .home__rooms {
     font-size: 1.5rem;
     margin-left: 2rem;
     display: flex;
     align-items: center; }
-    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+    .home__location svg, .home__rooms svg {
       fill: #f85606;
       height: 2rem;
       width: 2rem;
       margin-right: 1rem; }
   .home__btn {
-    grid-column: 1 / -1; }
+    grid-column: 1 / -1;
+    z-index: 0; }
 
 .section-login {
   padding: 10rem 0;
