--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -96,7 +96,9 @@
             align-items: center;
             flex-direction: row;
             align-content: center;
-            width: 25rem;
+            justify-content: center;
+            // width: 25rem;
         }
     }
 }
+
