--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -26,7 +26,7 @@ body {
     font-size: 1.7rem;
     color: #000;
     text-align: left;
-    padding: 2.5rem 0; }
+    padding: .5rem 1rem; }
   .l-2 {
     padding: 0%; }
   .l__copyright {
@@ -267,7 +267,8 @@ body {
 .btn__registrationbtn {
   padding: .5rem 2rem;
   font-size: 1.1rem;
-  font-weight: 500; }
+  font-weight: 500;
+  width: 20%; }
 
 .btn__icon, .btn__icon:link, .btn__icon:visited {
   display: flex;
@@ -307,7 +308,7 @@ body {
     background-color: grey; }
 
 .form__group:not(:last-child) {
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   transition: all .2s; }
 
 .form__input {
@@ -351,6 +352,48 @@ body {
   visibility: hidden;
   transform: translateY(-4rem);
   color: #FFFFFF; }
+
+.form__radio-group {
+  width: 49%;
+  display: inline-block;
+  display: flex;
+  justify-content: space-between; }
+
+.form__radio-input {
+  display: none; }
+
+.form__radio-label {
+  font-size: 1.3rem;
+  cursor: pointer;
+  position: relative;
+  padding: 0 2.5rem;
+  color: white;
+  margin-bottom: 1rem; }
+
+.form__radio-button {
+  height: 1.7rem;
+  width: 1.7rem;
+  border: 0.3rem solid #f85606;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  left: 0; }
+  .form__radio-button::after {
+    content: "";
+    display: block;
+    height: .7rem;
+    width: .7rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f85606;
+    opacity: 0;
+    transition: opacity .2s; }
+
+.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+  opacity: 1; }
 
 .form__groupp:not(:last-child) {
   margin-bottom: 0.2rem;
@@ -411,15 +454,18 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all .3s;
-  background-image: linear-gradient(rgba(231, 100, 7, 0.5), rgba(243, 160, 3, 0.5)), url(/img/shopping-2.jpeg);
+  background-image: linear-gradient(rgba(231, 100, 7, 0.5), rgba(243, 160, 3, 0.5)), url(/img/login.jpg);
   grid-column: full-start / col-end 6;
-  background-size: cover;
-  background-position: center;
-  display: grid;
+  background-size: contain;
+  background-position: inherit;
+  display: flex;
   grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-template-columns: minmax(min-content, max-content);
-  grid-row-gap: 1.5rem;
-  justify-content: center; }
+  grid-row-gap: 1rem;
+  justify-content: space-between;
+  align-items: start;
+  justify-items: start;
+  align-content: space-evenly; }
   .popup__1 {
     position: fixed;
     width: 100%; }
