--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -52,6 +52,7 @@
 
         background-color: rgba($color-primary-dark, 0.6);
         color: $color-white;
+        // width: 50%;
 
         &::after {
             background-color: rgba($color-primary-dark, 0.9);
@@ -85,6 +86,7 @@
         padding: .5rem 2rem;
         font-size: 1.1rem;
         font-weight: 500;
+        width: 20%;
     }
 
     &__icon {
