--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,8 +1,8 @@
 .form {
     &__group:not(:last-child) {
-        margin-bottom: 2rem;
+        margin-bottom: 0;
         transition: all .2s;
-        
+
 
 
         // &:hover {
@@ -31,7 +31,7 @@
             border-bottom: 3px solid $color-grey-light-1;
             transform: skewY(0deg) skewX(0deg) scale(1.08);
             text-shadow: 0.5rem 1rem 2rem rgba(255, 255, 255, 0.2);
-            
+
         }
 
         &:focus:invalid {
@@ -70,8 +70,72 @@
 
     }
 
+    // radio
 
-//form registration
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+        display: flex;
+        justify-content: space-between;
+
+
+        
+    }
+
+    &__radio-input {
+        display: none;
+    }
+
+    &__radio-label {
+        font-size: 1.3rem;
+        cursor: pointer;
+        position: relative;
+        // padding-left: 2.5rem;
+        padding: 0 2.5rem;
+        color: white;
+        margin-bottom: 1rem;
+
+        // display: flex;
+        // justify-content: space-evenly;
+    }
+
+    &__radio-button {
+        height: 1.7rem;
+        width: 1.7rem;
+        border: .3rem solid $color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        // top: -.4rem;
+        
+
+        &::after {
+            content: "";
+            display: block;
+            // height: 1rem;
+            height: .7rem;
+            width: .7rem;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: $color-primary;
+            opacity: 0;
+            transition: opacity .2s;
+        }
+
+    }
+
+    &__radio-input:checked~&__radio-label &__radio-button::after {
+        opacity: 1;
+
+    }
+
+
+
+    //form registration
 
     &__groupp:not(:last-child) {
         margin-bottom: 0.2rem;
@@ -105,7 +169,7 @@
             border-bottom: 2px solid $color-grey-light-1;
             transform: skewY(0deg) skewX(0deg) scale(1.02);
             text-shadow: 0.5rem 1rem 2rem rgba(255, 255, 255, 0.2);
-            
+
         }
 
         &:focus:invalid {
