--- a/sass/_label.scss
+++ b/sass/_label.scss
@@ -8,7 +8,7 @@
         font-size: 1.7rem;
     color: $color-black;
     text-align: left;
-    padding: 2.5rem 0;
+    padding: .5rem 1rem;
 
     }
 
@@ -51,5 +51,7 @@
             transform: rotate(3.5deg) scale(1.3);
         }
     }
+
+    
 
 }
