--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,52 +1,3 @@
-// COLOR VARIABLES
-// $color-primary: #334FB4;
-$color-primary-dark: #334FB4;
-
-$color-primary: #f85606;
-$color-primary-light-1: #f58d5a;
-
-
-$color-primary-dark: #ff1100;
-$color-primary-dark-1: #e75207;
-$color-primary-dark-2: #d44701;
-
-$color-primary-gradiant-1:#E76407;
-$color-primary-gradiant-2:#F3A003;
-
-$color-black: #000;
-$color-text: #FFFFFF;
-$color-white: #FFFFFF;
-$color-search: #ffffff9d;
-
-$color-notification : #C28D8D;
-
-$color-secondary: #101d2c;
-$color-secondary-dark: #393939; 
-$color-secondary-dark-2: #333939; 
-$color-secondary-dark-3: #202222; 
-
-$color-grey-light-1: #f9f7f6;
-$color-grey-light-2: #aaa;
-
-$color-grey-dark-1: #54483A;
-$color-grey-dark-2: #6D5D4B;
-
-// $color-aqua-light: #7fffd4;
-$color-aqua-light: #050B0B;
-// $color-aqua-dark: #176d50;
-$color-aqua-dark: #33423D;
-
-
-// FONT VARIABLES
-$font-primary: 'Nunito', sans-serif;
-$font-display: 'Josefin Sans', sans-serif;
-
-// RESPONSIVE BREAKPOINTS
-$bp-largest: 75em;   // 1200px
-$bp-large: 62.5em;   // 1000px
-$bp-medium: 50em;    // 800px;
-$bp-small: 37.5em;    // 600px;
-
 
 
 *,
@@ -57,6 +8,44 @@ $bp-small: 37.5em;    // 600px;
     box-sizing: inherit;
 }
 
+html {
+    // this define what 1 rem is
+    font-size: 62.5%; // 1rem = 10px , 10px\16px = 62.5%
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1rem=9px, // 9px\16px=56.25%
+    }
+    @include respond(tab-port) {
+        // width < 900?
+        font-size: 50%;
+        //1 rem = 8px, 8/16 = 50%
+    }
+
+    // @include respond(phone) {
+
+    //     font-size: 30%;
+    //1 rem = 4.8px, 4.8/16 = 30%
+    // }
+
+    @include respond(big-desktop) {
+        font-size: 75%;
+        //1rem = 12, 12/16px = 75%
+    }
+    
+    
+}
+
+body {
+
+    box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond (tab-port) {
+        padding: 10rem;
+    }
+}
+
+/*
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
@@ -75,4 +64,4 @@ body {
     line-height: 1.6;
 }
 
-
+*/
