--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,5 +1,3 @@
-
-
 *,
 *::before,
 *::after {
@@ -12,36 +10,51 @@ html {
     // this define what 1 rem is
     font-size: 62.5%; // 1rem = 10px , 10px\16px = 62.5%
 
-    @include respond(tab-land) {
+    @include respond(tablet) {
         font-size: 56.25%; // 1rem=9px, // 9px\16px=56.25%
     }
-    @include respond(tab-port) {
+
+    @include respond(desktop) {
         // width < 900?
         font-size: 50%;
         //1 rem = 8px, 8/16 = 50%
     }
 
+
     // @include respond(phone) {
 
     //     font-size: 30%;
-    //1 rem = 4.8px, 4.8/16 = 30%
+    // 1 rem = 4.8px, 4.8/16 = 30%
     // }
 
     @include respond(big-desktop) {
         font-size: 75%;
         //1rem = 12, 12/16px = 75%
     }
-    
-    
+
+
 }
 
 body {
 
     box-sizing: border-box;
+    // padding: 3rem;
     padding: 3rem;
 
-    @include respond (tab-port) {
-        padding: 10rem;
+    // @include respond (phone) {
+    //     padding: 3rem -3rem 3rem 3rem;
+    // }
+
+    @include respond (tablet) {
+        padding: 3rem;
+    }
+
+    @include respond (desktop) {
+        padding: 3rem;
+    }
+
+    @include respond (big-desktop) {
+        padding: 3rem;
     }
 }
 
