--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -14,11 +14,11 @@
     font-size: 1.4rem;
     font-style: italic;
     font-weight: 100;
-    padding-top: .5rem;
+    padding: 1rem 0;
     align-items: center;
     justify-content: space-between;
 
-   
+
 
     &-login {
         text-align: center;
@@ -53,8 +53,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
 
+    }
 
 }
 
