--- a/sass/_label.scss
+++ b/sass/_label.scss
@@ -3,16 +3,19 @@
     color: $color-primary-dark;
     text-align: center;
     padding: 2.5rem 0;
+    // background-image: linear-gradient(right, rgba($color-black, .8), rgba($color-black, .5));
+    background-color: $color-black;
 
-    &-1{
+
+    &-1 {
         font-size: 1.7rem;
-    color: $color-black;
-    text-align: left;
-    padding: .5rem 1rem;
+        color: $color-black;
+        text-align: left;
+        padding: .5rem 1rem;
 
     }
 
-    &-2{
+    &-2 {
         padding: 0%;
     }
 
@@ -21,6 +24,8 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+        letter-spacing: .12rem;
+        
 
         // &-1{
         //     padding-top: 2rem;
@@ -30,7 +35,7 @@
         // }
     }
 
-    
+
     &__link {
 
         &:link,
@@ -54,3 +59,7 @@
 
 
 }
+
+// .footer{
+//     background-color: $color-black;
+// }
