--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -33,16 +33,19 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem; }
+  padding: .5rem; }
+  @media only screen and (max-width: 26.5625em) {
+    body {
+      padding: 0.1rem; } }
   @media only screen and (max-width: 48em) {
     body {
-      padding: 3rem; } }
+      padding: 0.1rem; } }
   @media only screen and (max-width: 64em) {
     body {
-      padding: 3rem; } }
+      padding: 0.1rem; } }
   @media only screen and (min-width: 90em) {
     body {
-      padding: 3rem; } }
+      padding: 0.1rem; } }
 
 /*
 html {
@@ -96,7 +99,7 @@ body {
     transform: rotate(3.5deg) scale(1.3); }
 
 .side-nav {
-  font-size: 1.4rem;
+  font-size: 150%;
   list-style: none;
   margin-top: 3.5rem; }
   .side-nav__item {
@@ -123,7 +126,7 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     display: block;
-    padding: 1.5rem 3rem;
+    padding: 1.5rem 0.5rem 1.5rem 3rem;
     position: relative;
     z-index: 10;
     display: flex;
@@ -140,10 +143,19 @@ body {
 
 .sidebar {
   background-color: #f58d5a;
-  flex: 0 0 18%;
+  flex: 0 0 23%;
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
+  @media only screen and (max-width: 48em) {
+    .sidebar {
+      flex: 0 0 30%; } }
+  @media only screen and (max-width: 64em) {
+    .sidebar {
+      flex: 0 0 23%; } }
+  @media only screen and (min-width: 90em) {
+    .sidebar {
+      flex: 0 0 18%; } }
 
 .container {
   max-width: 120rem;
@@ -625,7 +637,7 @@ body {
   border-radius: 6px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
   .home-page__form {
-    width: 60%;
+    width: 75%;
     padding: 6rem; }
 
 .page-view {
