--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -41,7 +41,7 @@
     letter-spacing: .1rem;
 
     &__1{
-        background-color: grey;
+        background-color: $color-primary;
     //    background-size: 75% 75%;
         // padding: 0 3rem 0 3rem;
     }
