--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -2,16 +2,23 @@
 // $color-primary: #334FB4;
 $color-primary-dark: #334FB4;
 
-$color-primary: #f85606;
+// $color-primary: #f85606;
+$color-primary: #282828;
 $color-primary-light-1: #f58d5a;
 
 
-$color-primary-dark: #ff1100;
+// $color-primary-dark: #ff1100;
+// $color-primary-dark: #101d2c;
+// $color-primary-dark: #3500d3;
+$color-primary-dark: #240090;
 $color-primary-dark-1: #e75207;
 $color-primary-dark-2: #d44701;
 
-$color-primary-gradiant-1: #E76407;
-$color-primary-gradiant-2: #F3A003;
+// $color-primary-gradiant-1: #E76407;
+// $color-primary-gradiant-2: #F3A003;
+
+$color-primary-gradiant-1: #282828;
+$color-primary-gradiant-2: #101d2c;
 
 $color-black: #000;
 $color-text: #FFFFFF;
@@ -35,15 +42,18 @@ $color-grey-dark-2: #6D5D4B;
 $color-aqua-light: #050B0B;
 // $color-aqua-dark: #176d50;
 $color-aqua-dark: #33423D;
-
-
+// $container: #334FB4;
+// $container: #05386b;
+$container: #161616;
+$color-form:#aaa3a3;
+$color-home:#c1b4b4;
 // FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
 // RESPONSIVE BREAKPOINTS
-$bp-largest: 75em; // 1200px
+$bp-largest: 75em; // 1200px  1024/16
 $bp-large: 62.5em; // 1000px
-$bp-medium: 50em; // 800px;
+$bp-medium: 48em; // 768px;
 $bp-small: 37.5em; // 600px;
 
