--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -20,16 +20,34 @@ ORDER: Base + typography > general layout + grid > page layout > components
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
-  @media only screen and (max-width: 48em) {
-    html {
-      font-size: 56.25%; } }
-  @media only screen and (max-width: 64em) {
+  font-size: 62.5%;
+  /*  @include respond(tablet) {
+        font-size: 56.25%; // 1rem=9px, // 9px\16px=56.25%
+    }
+
+    @include respond(desktop) {
+        // width < 900?
+        font-size: 50%;
+        //1 rem = 8px, 8/16 = 50%
+    }
+    // @media only screen and (max-width: $bp-large) {
+    //     font-size: 50%;
+    // }
+
+
+    // @include respond(phone) {
+
+    //     font-size: 30%;
+    // 1 rem = 4.8px, 4.8/16 = 30%
+    // }
+
+    @include respond(big-desktop) {
+        font-size: 75%;
+        //1rem = 12, 12/16px = 75%
+    }*/ }
+  @media only screen and (max-width: 62.5em) {
     html {
       font-size: 50%; } }
-  @media only screen and (min-width: 90em) {
-    html {
-      font-size: 75%; } }
 
 body {
   box-sizing: border-box;
@@ -69,13 +87,13 @@ body {
 */
 .l {
   font-size: 1.25rem;
-  color: #ff1100;
+  color: #240090;
   text-align: center;
   padding: 2.5rem 0;
   background-color: #000; }
   .l-1 {
     font-size: 1.7rem;
-    color: #000;
+    color: #FFFFFF;
     text-align: left;
     padding: .5rem 1rem; }
   .l-2 {
@@ -87,7 +105,7 @@ body {
     letter-spacing: .12rem; }
   .l__link:link, .l__link:visited {
     color: #000;
-    background-color: #f58d5a;
+    background-color: #282828;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
@@ -95,13 +113,17 @@ body {
   .l__link:hover, .l__link:active {
     color: white;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
-    background-color: #f85606;
+    background-color: #282828;
     transform: rotate(3.5deg) scale(1.3); }
 
 .side-nav {
   font-size: 150%;
   list-style: none;
   margin-top: 3.5rem; }
+  @media only screen and (max-width: 48em) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     position: relative; }
     .side-nav__item:not(:last-child) {
@@ -113,7 +135,7 @@ body {
     left: 0;
     height: 100%;
     width: 3px;
-    background-color: #ff1100;
+    background-color: #240090;
     transform: scaleY(0);
     transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
   .side-nav__item:hover::before, .side-nav__item--active::before {
@@ -122,7 +144,7 @@ body {
   .side-nav__item:active::before {
     background-color: var(--color-primary-light); }
   .side-nav__link:link, .side-nav__link:visited {
-    color: #000;
+    color: #FFFFFF;
     text-decoration: none;
     text-transform: uppercase;
     display: block;
@@ -140,9 +162,12 @@ body {
 .content {
   display: flex;
   height: 50rem; }
+  @media only screen and (max-width: 48em) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
-  background-color: #f58d5a;
+  background-color: #282828;
   flex: 0 0 23%;
   display: flex;
   flex-direction: column;
@@ -160,11 +185,17 @@ body {
 .container {
   max-width: 120rem;
   margin: 8rem auto;
-  background-color: #f85606; }
+  background-color: #161616;
+  box-shadow: red; }
+  @media only screen and (max-width: 75em) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      width: 100%; } }
 
 .heading {
   text-align: center;
-  background-color: #f85606;
+  background-color: #282828;
   height: 3.5rem;
   color: #FFFFFF;
   font-size: 1.4rem;
@@ -303,10 +334,10 @@ body {
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
   .btn--login {
-    background-color: rgba(255, 17, 0, 0.6);
+    background-color: rgba(36, 0, 144, 0.6);
     color: #FFFFFF; }
     .btn--login::after {
-      background-color: rgba(255, 17, 0, 0.9); }
+      background-color: rgba(36, 0, 144, 0.9); }
   .btn::after {
     content: "";
     display: inline-block;
@@ -361,10 +392,10 @@ body {
   font-size: 1.8rem;
   letter-spacing: .1rem; }
   .page__1 {
-    background-color: grey; }
+    background-color: #282828; }
 
 .form {
-  background-color: rgba(255, 255, 255, 0.781);
+  background-color: #aaa3a3;
   padding: 3rem;
   transition: all .2s; }
   .form__group:not(:last-child) {
@@ -389,7 +420,7 @@ body {
       transform: skewY(0deg) skewX(0deg) scale(1.08);
       text-shadow: 0.5rem 1rem 2rem rgba(255, 255, 255, 0.2); }
     .form__input:focus:invalid {
-      border-bottom: 3px solid #ff1100;
+      border-bottom: 3px solid #240090;
       transform: skewY(0deg) skewX(0deg) scale(1.08);
       text-shadow: 0.5rem 1rem 2rem rgba(255, 255, 255, 0.2); }
     .form__input::-webkit-input-placeholder {
@@ -421,12 +452,12 @@ body {
     cursor: pointer;
     position: relative;
     padding: 0 2.5rem;
-    color: #000;
+    color: #FFFFFF;
     margin-bottom: 1rem; }
   .form__radio-button {
     height: 1.7rem;
     width: 1.7rem;
-    border: 0.3rem solid #f85606;
+    border: 0.3rem solid #FFFFFF;
     border-radius: 50%;
     display: inline-block;
     position: absolute;
@@ -441,7 +472,7 @@ body {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #f85606;
+      background-color: #FFFFFF;
       opacity: 0;
       transition: opacity .2s; }
   .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
@@ -469,7 +500,7 @@ body {
       transform: skewY(0deg) skewX(0deg) scale(1.02);
       text-shadow: 0.5rem 1rem 2rem white; }
     .form__inputt:focus:invalid {
-      border-bottom: 2px solid #ff1100;
+      border-bottom: 2px solid #240090;
       transform: skewY(0deg) skewX(0deg) scale(1.02);
       text-shadow: 0.5rem 1rem 2rem rgba(255, 255, 255, 0.2); }
     .form__inputt::-webkit-inputt-placeholder {
@@ -577,7 +608,7 @@ body {
     transition: all .2s;
     line-height: 1; }
   .popup__close:hover {
-    color: #f85606; }
+    color: #282828; }
 
 .homes {
   grid-column: center-start / center-end;
@@ -587,7 +618,7 @@ body {
   grid-gap: 7rem; }
 
 .home {
-  background-color: #f9f7f6;
+  background-color: #c1b4b4;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-row-gap: 3.5rem; }
@@ -619,7 +650,7 @@ body {
     display: flex;
     align-items: center; }
     .home__location svg, .home__rooms svg {
-      fill: #f85606;
+      fill: #282828;
       height: 2rem;
       width: 2rem;
       margin-right: 1rem; }
@@ -629,10 +660,10 @@ body {
 
 .section-login {
   padding: 10rem 0;
-  background-image: linear-gradient(to right bottom, rgba(231, 100, 7, 0.801), #f3a003); }
+  background-image: linear-gradient(to right bottom, rgba(40, 40, 40, 0.801), #101d2c); }
 
 .home-page {
-  background-image: linear-gradient(105deg, rgba(243, 160, 3, 0.5) 40%, rgba(0, 0, 0, 0.8) 60%, transparent 100%), url(/img/shopping-3.jpeg);
+  background-image: linear-gradient(105deg, rgba(16, 29, 44, 0.5) 40%, rgba(0, 0, 0, 0.8) 60%, transparent 100%), url(/img/shopping-3.jpeg);
   background-size: 100%;
   border-radius: 6px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
