--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,8 +1,14 @@
 .container {
     max-width: 120rem;
     margin: 8rem auto;
-    background-color: $color-primary;
-    // box-shadow: red;
+    background-color: $container;
+    box-shadow: red;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 
 }
 
