--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -8,7 +8,7 @@
 }
 
 .home {
-    background-color: $color-grey-light-1;
+    background-color: $color-home;
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
